# TAED2-SmartHealth.AI

./: .gitignore  LICENSE  Makefile  Obesity_data.ipynb  README.md  api.py  data.dvc  datasetcard.md  dvc.yaml  emissions.csv  index.html  modelcard.md  params.yaml  pyproject.toml  user_input.json  user_input.py
.dvc/: config
data/: raw.dvc
data/interim/: .gitignore  obesity_clean.csv
data/processed/: .gitignore  config.py  gx_context_configuration.py  test.csv  train.csv  validate_data.py  validation.csv
gx/: great_expectations.yml
gx/checkpoints/: obesity_checkpoint.json
gx/data_docs/: index.html
gx/data_docs/expectations/: obesity_data_suite.html
gx/expectations/: .ge_store_backend_id  obesity_data_suite.json
gx/uncommitted/: config_variables.yml
gx/validation_definitions/: clean_data_validator.json  raw_data_validator.json
models/: .gitignore  modelcard.md  train_obesity.py
models/tests/: test_model.py
notebooks/: Obesity_data.ipynb
numbers/: pyproject.toml
numbers/src/numbers/: __init__.py
reports/: emissions.csv  lint_report.txt  metrics.json
taed2_smarthealth_ai/: __init__.py  dataset.py  features.py  main.py  plots.py  preprocess_obesity.py  split_obesity.py  tailored_advice.py  train_obesity copy.py  train_obesity.py
taed2_smarthealth_ai/api/: api.py  api_fastapi.py  schema.py
taed2_smarthealth_ai/data/: config.py  gx_context_configuration.py  preprocess_obesity.py  split_obesity.py  validate_data.py
taed2_smarthealth_ai/modeling/: predict.py  train.py
tests/: test_api.py  test_data.py  test_model.py  test_preprocessed.py
(+43 files in other folders)
